tests/ui/consts/const-eval/heap/alloc_intrinsic_nontransient_fail.stderr
error: unsupported untyped pointer in constant
  --> $DIR/alloc_intrinsic_nontransient_fail.rs:6:1
   |
LL | const FOO: *const i32 = foo();
   | ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: memory only reachable via raw pointers is not supported

error: aborting due to previous error

